actually fixed bug this time; delete-account now works on mobile

--- a/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/Navigation/SideDrawer.css
+++ b/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/Navigation/SideDrawer.css
@@ -8,7 +8,3 @@
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
-
-.side-drawer.faded {
-  opacity: 0.3;
-}
