--- a/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/UIElements/Backdrop.css
+++ b/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/UIElements/Backdrop.css
@@ -4,6 +4,11 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, .75);
   z-index: 10;
+}
+
+.backdrop.stacked {
+  z-index: 101;
+  opacity: 1;
 }
