--- a/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/UIElements/Modal.css
+++ b/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/UIElements/Modal.css
@@ -1,5 +1,5 @@
 .modal {
-  z-index: 101;
+  z-index: 102;
   position: fixed;
   top: 22vh;
   left: 10%;
